--- a/Samsel_Jerome_Dev4/Samsel_Jerome_Dev4.vcxproj.filters
+++ b/Samsel_Jerome_Dev4/Samsel_Jerome_Dev4.vcxproj.filters
@@ -46,4 +46,8 @@
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="MyVshader.hlsl" />
+    <FxCompile Include="MyPshader.hlsl" />
+  </ItemGroup>
 </Project>
