--- a/Samsel_Jerome_Dev4/Samsel_Jerome_Dev4.vcxproj.filters
+++ b/Samsel_Jerome_Dev4/Samsel_Jerome_Dev4.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="Samsel_Jerome_Dev4.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Assets\StoneHenge.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Samsel_Jerome_Dev4.cpp">
@@ -49,5 +52,6 @@
   <ItemGroup>
     <FxCompile Include="MyVshader.hlsl" />
     <FxCompile Include="MyPshader.hlsl" />
+    <FxCompile Include="MyMeshVshader.hlsl" />
   </ItemGroup>
 </Project>
